--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="pantalla">0</div>
 
         <button class="btn" id="C">C</button>
-        <button class="btn" id="borrar">🡠</button>
+        <button class="btn" id="borrar">⌫</button>
         <button class="btn" id="dividir">/</button>
          <button class="btn">7</button>
          <button class="btn">8</button>
